# badge-of-stableness

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
scripts/: check.py
src/badge_of_stableness/: __init__.py  asset_manager.py  camera.py  int_point.py  main.py  models.py  point.py  pygame.py  utils.py
