[project]
name = "badge-of-stableness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.10",
    "pygame>=2.6.1",
]

[dependency-groups]
dev = [
    "poethepoet>=0.37.0",
    "pyright>=1.1.406",
    "ruff>=0.13.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
check = "badge_of_stableness:check"
fix = "badge_of_stableness:fix"

[tool.setuptools.package-data]
"badge-of-stableness" = ["py.typed"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
preview = false

[tool.ruff.lint]
preview = true
select = ["E", "W", "F", "I", "B", "C4", "UP", "E401", "ISC001", "ISC002"]
# https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
ignore = ["W191", "E111", "E114", "E117", "D206", "D300", "Q000", "Q001", "Q002", "Q003", "COM812", "COM819", "UP045"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.flake8-implicit-str-concat]
allow-multiline = false

[tool.poe.tasks]
check = { cmd = "scripts/check.py" }
fix = { cmd = "scripts/check.py --fix" }
